--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.3",
 		"globals": "^15.4.0",
-		"prettier": "^3.3.2",
+		"prettier": "^3.5.3",
 		"prettier-plugin-svelte": "^3.2.4",
+		"prettier-plugin-tailwindcss": "^0.6.11",
 		"slice-machine-ui": "^2.13.1",
 		"svelte": "^4.2.18",
 		"svelte-check": "^3.8.0",
@@ -37,7 +38,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/dm-sans": "^5.2.5",
 		"@prismicio/client": "^7.16.1",
-		"@prismicio/svelte": "^1.4.0"
+		"@prismicio/svelte": "^1.4.0",
+		"@tailwindcss/vite": "^4.0.9",
+		"tailwindcss": "^4.0.9"
 	}
 }
